# Yazi

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
client/python/: bench.py  client.py
doc/: C++ INI 解析器实现.docx  C++ JSON 解析器设计与实现.docx  C++ XML 解析器设计与实现.docx  C++ 单例模式.docx  C++ 反射：从设计到实现.docx  C++ 多线程：线程池从设计到实现.docx  C++ 日志系统.docx  C++ 跨平台文件、目录操作.docx  READEME.md  Yazi-RPC_ 一个高性能的RPC框架.docx  Yazi：一个百万并发的C++服务框架.docx
plugin/: TestPlugin.h
scripts/: build.sh
server/: Server.cpp
socket/: ServerSocket.cpp  Socket.cpp  Socket.h  SocketHandler.cpp  SocketHandler.h
task/: WorkTask.cpp  WorkTask.h
tests/: CMakeLists.txt  main.cc  test.cc
thread/: AutoLock.cpp  AutoLock.h  Mutex.cpp  Mutex.h  Task.h  TaskDispatcher.cpp  TaskDispatcher.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
thread11/: Condition.cpp  Condition.h  Echotask.h  Mutex.cpp  Mutex.h  Task.cpp  Task.h  TaskDispatcher.cpp  TaskDispatcher.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h  main.cpp
utility/: IniFile.cpp  IniFile.h  Logger.cpp  Logger.h  NewLogger.cc  NewLogger.h  ObjectPool.h  Singleton.h  SingletonA.h
yazi-reflect/: README.md  main.cpp
yazi-reflect/reflect/: ClassFactory.cpp  ClassFactory.h  ClassField.h  ClassMethod.h  ClassRegister.h
yazi-reflect/test/: A.h
yazi-rpc/socket/: ServerSocket.cpp
yazi-xml/: main.cpp  test.xml
yazi-xml/xml/: Xml.cpp  Xml.h
